# ipc-network-monitor

./: .gitignore  Cargo.toml  README.md  analyze_proc.sh  network_stress.sh  test_end_to_end.sh  test_proc_simple.sh  test_udp_correlation.sh  test_udp_proc.sh  test_udp_simple.sh  verify_proc.sh
collector/: Cargo.toml
collector/src/: main.rs
common/: Cargo.toml
common/src/: export_formats.rs  lib.rs
docs/: ALERTING_DESIGN.md  CAPABILITY_REQUIREMENTS.md  CORRELATION_DESIGN.md  DASHBOARD_DESIGN.md  ERROR_HANDLING.md  EXPORT_FORMATS.md  FILE_UPDATE_CHECKLIST.md  IMPLEMENTATION_ROADMAP.md  POLICY_LIFECYCLE.md  PROBE_LIFECYCLE.md  REQUIREMENTS_TO_IMPLEMENTATION_GAPS.md  SECURITY_MODEL.md  SESSION_MANAGEMENT.md  UI_ARCHITECTURE.md  UI_INTERACTIONS.md
docs/uml/: README.md  class.puml  component.puml  sequence.puml
kernel-spy/: Cargo.toml  README.md
kernel-spy/kernel-spy/: Cargo.toml  build.rs
kernel-spy/kernel-spy-common/: Cargo.toml
kernel-spy/kernel-spy-common/src/: lib.rs
kernel-spy/kernel-spy-ebpf/: Cargo.toml
kernel-spy/kernel-spy-ebpf/src/: main.rs  pid_track.rs
kernel-spy/kernel-spy/src/: aggregate.rs  alerts.rs  attr.rs  config.rs  control.rs  control_rpc.rs  kernel_stats.rs  main.rs  netdev.rs  nft.rs  pid_attach.rs  policy_impact.rs  proc_corr.rs  session_history.rs  socket_perm.rs  ss_enrich.rs  tc_control.rs
kernel-spy/kernel-spy/tests/: privileged_ignored.rs
scripts/: netmon-stress-load.sh
ui/: Cargo.toml
ui/src/: main.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: AnalyticsView.tsx  App.tsx  bridge.ts  chartTooltips.tsx  classify.ts  fmt.ts  index.css  types.ts  useNetmonSession.ts  userAggregate.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/src/: commands.rs  export_reader.rs  lib.rs  main.rs
