[package]
name = "ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
common = { path = "../common" }
serde_json = { workspace = true }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui_plot = "0.29"
