[package]
name = "kernel-spy-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
kernel-spy-common = { path = "../kernel-spy-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.1.0"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "kernel-spy"
path = "src/main.rs"
