[package]
name = "kernel-spy"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
kernel-spy-common = { path = "../kernel-spy-common", features = ["user"] }
common = { path = "../../common" }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
users = "0.11"

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
rustc_version = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "kernel-spy"
path = "src/main.rs"
